@@ -1,10 +1,9 @@
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 AUX code2color.patch 1110 RMD160 712f7b79c94f92ee62825d5f53627f18fae693d2 SHA1 a82f937f3a923b52adc4f14cfc9b641903884839 SHA256 a3887126826ef0b4b821bd97cf4e7abfc8b1c9280bf2bb18a2a4cec9a2973936
-AUX less.envd 50 RMD160 e9d7b2497aa81e13b740dc765c0fc87d4f1f2f8e SHA1 f903d459e7f0b2c14009304bebb7a045a7cccf9d SHA256 1f186ac4f500c842a9016702b3d7e9d69fe161db23cf56c316ed7f5a51da6a4e
 AUX lesspipe.sh 7180 RMD160 460d9b4bd9dd7bbeae05f0441dc47ad5b1f8437f SHA1 8e7baca8239b8b36649bb9d0bb4ab0642b3a3bb6 SHA256 57d0d2022223ac028c2ac65b50944127520c8c1a9129e8ee493746677592c23c
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
 DIST less-436.tar.gz 303921 RMD160 b186b76fcdbf38056b32fbc1b54877dccf64a8ec SHA1 f78998a1a79a7e1962c901dd41bdc3d1c2005471 SHA256 57a16ff07431a9af45cf1cd5b374e1066d019304219f0d156e22bb8c4d6734d2
 DIST less-select-patch-436.tar.gz 47383 RMD160 5ccbe853d1f6ce5940f283bd8265ce8b75e20363 SHA1 21f3f8b16be8cd0724820c167d6f685d236cec36 SHA256 bbdd0ee9241803b8de719c358090354bde63472d1df6db271a50be51bfc800f3
-EBUILD less-select-436-r1.ebuild 2452 RMD160 9834d44e0766b14f6a8893af47ccc32821bcea51 SHA1 33e307323e914d3eefaa4b09fe5af3ae328beeb0 SHA256 b246728706a4004ca7cf15081e1f6c1f6aa41bdb2dc9cc13f381a1264e4b5bcc
-MISC ChangeLog 1429 RMD160 60b480b860d9391d7010b0c91604704a043d50e0 SHA1 14f5042d244670f39addc6b25dd986c1ef05c9ed SHA256 c700f7088cdf522d2fb0c6a74f1b00c6fca9e424e50d60eeb6085c746e66b14a
+EBUILD less-select-436-r1.ebuild 2345 RMD160 40d6cdaace5f171205ad4608dfa2b15d07f43195 SHA1 2633f4bbd3b71c78133edbe364cc839558d205da SHA256 b91bfb1bacbf0be510a3a262e4435a6ff71d43a4d765ad5701811edc312de966
+MISC ChangeLog 1567 RMD160 87e948eeb23eb84fedcceba67447dcbc5184e2fd SHA1 93e3e978900fc07f7f2c03a155fce25d7b2e8239 SHA256 19901b35b7d07de051320714449eaefc588cf177a5b785ee5740c47376e3708c
 MISC metadata.xml 502 RMD160 3e3f84a9d63d37d044acba98f3add536f1dc98a6 SHA1 a45389d6d02b23a47a70a174d4d49b9c24480f62 SHA256 24b8610aa08d7c0ef1f1e84af06ffe327396a5132cb9bf51c426496e4ad8df61
