@@ -1,4 +1,4 @@
-DIST noscript-1.9.9.81.xpi 483545 RMD160 212762c8fef02a6d00e6c975d7600afc25493aca SHA1 182070ba5f9d30666e4d5d25e7bca9e1b2bbafd9 SHA256 fb3fb2583a0e75eba91b7d7917ada95a2ecc4ee5344a1f9b8f3b6e41030d45a0
-EBUILD noscript-1.9.9.81.ebuild 472 RMD160 bf62135764a65da396ca5684c31aa53c7d0cce88 SHA1 2d1843406f6f433202070eeb3c8a9c51f6bb08f2 SHA256 e7a23ac29a1dbc2c2cb0a494f5cdae8ebcb270849f9b46aa35bdc7df095611b7
-MISC ChangeLog 789 RMD160 b827aad7a7a6acb69f4a5fcd53f8520badd8fb36 SHA1 1e7a6cc72176dc5fbcc81a44da5a05ef320b25fe SHA256 5ed0301bb3808a5b2f30e31cbe3ed7fd52f82753e47bd5e279116b3521009fd5
+DIST noscript-1.9.9.87.xpi 484474 RMD160 904257f992d4616ab55a5f500b26b2d517c9f497 SHA1 05dfdbb96422c154464e941dc7dabd494b52fe75 SHA256 a2bf02ee74f9242a4664ace0d889631fc1366c1e4e20a5bea9c662244b02ed9d
+EBUILD noscript-1.9.9.87.ebuild 472 RMD160 bf62135764a65da396ca5684c31aa53c7d0cce88 SHA1 2d1843406f6f433202070eeb3c8a9c51f6bb08f2 SHA256 e7a23ac29a1dbc2c2cb0a494f5cdae8ebcb270849f9b46aa35bdc7df095611b7
+MISC ChangeLog 978 RMD160 0a550fceb990efad5ae00a79f9af522ff0f95fb7 SHA1 5371432f94af3087b69243a8d49836c8736122fd SHA256 19920f02ec1bba4173ed66378991c39bd9ce7f97b0a2287e48eddb57e9e34572
 MISC metadata.xml 447 RMD160 4ec5ea6b99ff64f433b133a9347f0a57039b73b7 SHA1 a6af7ca7a606d2ddc4afbb9ba31ac694f22e9abd SHA256 927431d432628bf04ca3f6e6cd0fc9b5e40ac0f2d2ea70e4a795e0df527cba67
