@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*noscript-1.9.9.87 (12 Jun 2010)
+
+  06 Jun 2010; Martin Väth <martin@mvath.de>
+  +noscript-1.9.9.87.ebuild -flashgot-1.9.9.81.ebuild:
+  Version bump, remove old ebuild.
+
 *noscript-1.9.9.81 (06 Jun 2010)
 
   06 Jun 2010; Martin Väth <martin@mvath.de>
